# fullstack_workshop_rust

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml  api.http
.devcontainer/: devcontainer.json
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: film_repository.rs  films.rs  health.rs  lib.rs
api/lib/src/film_repository/: postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: .gitignore  Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  package-lock.json  tailwind.config.js
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: film_card.rs  film_modal.rs  header.rs
front/src/models/: button.rs
shared/: Cargo.toml
shared/src/: lib.rs  models.rs
