[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version =  "*", features = ["serde", "v4", "js"]}
chrono = {version = "*", features = ["serde"]}
serde = "1.0.193"

# database
sqlx = { version = "0.7.3", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json" ], optional = true}

[features]
backend = ["sqlx"]