[package]
name = "api-shuttle-n71"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
shuttle-actix-web = "0.34.1"
shuttle-runtime = "0.34.1"
shuttle-secrets = "*"
# serde = "1.0.148"
shuttle-shared-db = { version = "0.34.1", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
tokio = "1.26.0"

tracing = "0.1.40"

api-lib = { path = "../lib" }

# env_logger = "0.10.0"
# log = "0.4.17"

# serde_json = "1.0.93"
# rand = "*"
dotenvy = "*"

# reqwest = { version = "0.11", features = ["json"] }

# anyhow = "1.0.70"
# async-trait = "*"